<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XInvoice</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- Login页面 -->
    <string name="login_label_username">用户名:</string>
    <string name="login_label_password">密码:</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_status_null_username_or_password">用户名和密码不能为空。</string>
    <string name="login_status_invalid_username_or_password">帐号或密码错误，请重新输入。</string>
    <string name="login_status_network_or_connection_error">网络错误，请稍后再试。</string>
    <string name="login_register_link">没有帐号？ <a href="http://www.sina.com">注册</a></string>
    <string name="login_companyinfo">Copyright (c) 2014 Diyal</string>
    <string name="login_status_failure">登录失败。</string>
    <!-- 网络名称相关 -->
    <string name="pref_network_type_title">网络类型</string>
    <string name="pref_network_type_cmnet">cmnet</string>
    <string name="pref_network_type_cmwap">cmwap</string>
    <string name="pref_network_type_3g">3G/wifi</string>
    <!-- 主菜单按钮相关 -->
    <string name="profile_friends_count_title">我的发票</string>
    <string name="profile_followers_count_title">我的客户</string>
    <string name="profile_statuses_count_title">我的商品</string>
    <string name="profile_favourites_count_title">统计</string>
    <!-- 按钮提示 -->
    <string name="page_label_get_more">获取更多</string>
    <string name="page_label_go_back">返回</string>
    <string name="page_label_sure">确认</string>

    <!-- 发票录入 -->
    <string name="invoice_label_typecode">发票类型代码:</string>
    <string name="invoice_label_makedate">开票日期:</string>
    <string name="invoice_label_buygoodsunit">购货单位</string>
    <string name="invoice_label_name">名          称:</string>
    <string name="invoice_label_taxpayerno">纳税人识别号:</string>
    <string name="invoice_label_adressphone">地址、电话:</string>
    <string name="invoice_label_accountnum">开户行及账号:</string>
    
    <!--我的客户弹出框 -->
    <string name="customer_label_title">我的客户</string>
    <string name="customer_label_id">客户ID:</string>
    <string name="customer_label_name">客户名称:</string>
    <string name="customer_label_otherinfo">客户信息</string>
    
    <!-- 我的商品弹出框 -->
    <string name="goods_label_title">我的商品</string>
    <string name="goods_label_id">商品ID:</string>
    <string name="goods_label_name">商品名称:</string>
    <string name="goods_label_otherinfo">商品信息</string>
    
    

</resources>