<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <!-- 登录框 -->

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dp" >

        <!-- 用户名 text -->

        <TextView
            android:id="@+id/login_user_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_username" />
        <!-- TODO: disable auto correct. -->
        <!-- 用户名 input -->

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:inputType="text"
            android:singleLine="true" />
        <!-- 密码 text -->

        <TextView
            android:id="@+id/login_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit"
            android:layout_marginTop="3dp"
            android:text="@string/login_label_password" />
        <!-- 密码 input -->

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:inputType="textPassword"
            android:password="true"
            android:singleLine="true" />
        <!-- 登陆 button -->

        <Button
            android:id="@+id/signin_button"
            style="@style/blue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/password_edit"
            android:layout_below="@id/password_edit"
            android:layout_marginTop="10dp"
            android:text="@string/login_label_signin" />
        <!-- 提示栏 -->

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/signin_button"
            android:layout_alignLeft="@id/password_edit"
            android:autoLink="web"
            android:clickable="true"
            android:gravity="bottom"
            android:textColor="#888"
            android:textSize="13dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/login_register_link"
            android:textColor="#888"
            android:textColorLink="@color/link_color" />

        <!--
             <ImageView
            android:id="@+id/fanfoudroid_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:src="@drawable/twitter_follow_me" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/fanfoudroid_logo"
            android:layout_toLeftOf="@id/fanfoudroid_logo"
            android:paddingBottom="8dp"
            android:src="@drawable/fanfoudroid_logo" />
        -->

        <TextView
            android:id="@+id/companyinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"
            android:text="@string/login_companyinfo"
            android:textColor="#888"
            android:textColorLink="@color/link_color" />

    </RelativeLayout>

</LinearLayout>